--- a/client/index.html
+++ b/client/index.html
@@ -5,18 +5,25 @@
     <link rel="icon" type="image/png" href="/main.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Changa+One:ital@0;1&family=Monda:wght@400;700&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Audiowide&family=Changa:wght@200;300;400;500;600;700;800&family=Electrolize&family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Monda:wght@400;700&display=swap" rel="stylesheet">
     <title>CMS Connect 2.0</title>
+<!--Add this script tag in the page head-->
+<script src="https://dist.pixotronics.com/webgi/runtime/viewer-0.8.3.js"> </script>
+
+
   </head>
   <body>
     <div id="root"></div>
-
- 
+    <!--Add the viewer element somewhere inside the body of the page.-->
+  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script src="https://assets.codepen.io/16327/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@latest/bundled/lenis.js"></script>
 
     <!-- Then your main application script -->
     <script type="module" src="/src/main.tsx"></script>
 
     <!-- Any additional scripts -->
-    <script type="module" src="./script.js"></script>
+
   </body>
 </html>
